# Resolution

./: .gitignore  LICENSE  README.md  pyproject.toml
Resolution/: main.py
src/resolution_week1_suvamhere/: main.py  tasks.json
