[project]
name = "resolution-week1-suvamhere"
version = "0.1.0"
description = "My first packaged Python project"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "Suvam Pathak", email = "itsmesuvam9@gmail.com" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/suvamhere/Resolution"

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/resolution_week1_suvamhere"]

